# classifiedjson

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  noxfile.py  pyproject.toml
src/classifiedjson/: __init__.py  api.py  constants.py  encoder_interface.py  factory.py  hook_item.py  kind_data.py  kind_enum.py  kind_serialization.py  native_encoder.py  standard_deserializer.py  standard_serializer.py  utils.py
src/classifiedjson/natives/: array.py  bytes.py  dict.py  float_special.py
src/classifiedjson/standards/: containers.py  custom_attribute.py  dataclass.py  datetime.py  enum.py  scalars.py
tests/: conftest.py  test_api.py  test_array.py  test_containers.py  test_custom.py  test_custom_attribute.py  test_dataclass.py  test_datetime.py  test_dict.py  test_enum.py  test_primative.py  test_scalars.py  utils.py
